# ScalaPlayground

./: .gitignore  build.gradle  build.sbt  package-lock.json  package.json  settings.gradle
akka/: build.sbt
akka/src/main/resources/: first.conf  persistence-test.conf  second.conf
akka_cluster/: build.sbt
antlr/: build.sbt
antlr/src/main/antlr4/: Hello.g4
functional/: build.sbt
gradle/wrapper/: gradle-wrapper.properties
jmonkey/: build.sbt
jmonkey/src/main/scala/: HelloJME3.scala
jni/: CMakeLists.txt  build.sbt
jni/src/main/cpp/: library.cpp
jni/src/main/scala/myjni/: HelloJNI.scala
jogl/: build.sbt
jogl/src/main/resources/: HelloWorld.glsl  PlainRedCube_F.glsl  PlainRedCube_V.glsl
jogl/src/main/scala/: HelloTriangleIndexed.scala  HelloWorld.scala  PlainRedCube.scala
journal/: LOG
libgdx/: build.sbt
libgdx/src/main/scala/: AnimationDemo.scala  CameraDemo.scala  GraphicsDemo.scala  HelloWorld.scala  InputDemo.scala  TextureAtlasDemo.scala
llvm/: build.sbt
logging/: build.sbt
logging/src/main/resources/: log4j2.xml
lwjgl/: build.sbt
macros/: build.gradle  build.sbt
macros_test/: build.sbt
netty_learn/: build.sbt  scala.sbt
project/: plugins.sbt
reflection/: build.sbt
rxjava/: build.sbt
scala_lang/: build.sbt
scalafx/: build.sbt
scalajs/: build.sbt
spark/: build.sbt  scala.sbt
springboot/: build.sbt
springboot/project/: plugin.sbt
src/main/resources/: application.conf  benchmark.conf  long_running_benchmark.conf
vertx/: build.sbt
vertx/project/: Dependencies.scala
webgl/: build.sbt
(+214 files in other folders)
